chapter07/sample-gateway.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: Gateway 
metadata: 
  name: frontend-gateway 
  namespace: sample 
spec: 
  selector: 
    istio: ingressgateway 
  servers: 
  - port: 
      number: 80 
      name: http 
      protocol: HTTP 
    hosts: 
    - "*"
