chapter07/sample-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata: 
  name: frontend-ingress 
  namespace: sample 
spec: 
  hosts: 
  - "*" 
  gateways: 
  - frontend-gateway 
  http: 
  - route: 
    - destination: 
        host: helloworld 
        port: 
          number: 5000
